minor fix for checkout progress bar z-index

--- a/theme/cart/checkout/progressBar/progressBar.less
+++ b/theme/cart/checkout/progressBar/progressBar.less
@@ -85,16 +85,16 @@ ul.checkout-bar {
       font-weight: bold;
       &:before {
         background: @cart-progress-active;
-        z-index: 99999;
+        z-index: 999;
       }
     }
     &.visited {
       background: @cart-progress-next;
       color: @cart-progress-visited;
-      z-index: 99999;
+      z-index: 999;
       &:before {
-       background: @cart-progress-visited;
-        z-index: 99999;
+        background: @cart-progress-visited;
+        z-index: 999;
       }
     }
     &:nth-child(1) {
